--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,16 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
 /coverage/
+
+# Build - keep web build for Vercel deployment
+/build/app/
+/build/flutter_assets/
+/build/ios/
+/build/macos/
+/build/linux/
+/build/windows/
+# Keep build/web for deployment
 
 # Symbolication related
 app.*.symbols
